stopping portrait overflow

--- a/main2.css
+++ b/main2.css
@@ -229,6 +229,7 @@ a {
         width: 100vw;
         height: 100vh;
         background-color: black;
+        overflow: hidden;
     }
 
     aside{
